feat: data structure preparation for lexer and DOM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,12 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(CURL REQUIRED) 
 
-add_executable(html-to-dom src/main.c)
+add_executable(html-to-dom
+    src/main.c
+    src/dom.c
+    src/lexer.c
+)
+target_include_directories(html-to-dom PRIVATE include)
 
 include_directories(${CURL_INCLUDE_DIR})
 target_link_libraries(html-to-dom ${CURL_LIBRARIES})
